--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <link rel="modulepreload" href="./_import/components/libs/decarb-model/mini-decarbonisation.0633dbad.js">
 <link rel="modulepreload" href="./_import/components/libs/decarb-model/timeline.a2efe4ea.js">
 <link rel="modulepreload" href="./_import/components/libs/plots.609e0a64.js">
-<link rel="modulepreload" href="./_import/components/libs/leaflet/leaflet-map.bfeaff2d.js">
+<link rel="modulepreload" href="./_import/components/libs/leaflet/leaflet-map.a717cdfb.js">
 <link rel="modulepreload" href="./_import/components/libs/geo-morpher/morphs.b9dc31ca.js">
 <link rel="modulepreload" href="./_import/components/libs/helpers.30496caa.js">
 <link rel="modulepreload" href="./_import/components/libs/logger.864b8094.js">
@@ -44,6 +44,7 @@
 <link rel="modulepreload" href="./_import/components/libs/gridded-glyphmaps/glyph-designs/radialGlyphOverall.e15902a2.js">
 <link rel="modulepreload" href="./_import/components/libs/leaflet/basemaps.e55f05f5.js">
 <link rel="modulepreload" href="./_import/components/libs/leaflet/map-logger.28eded8b.js">
+<link rel="modulepreload" href="./_import/components/libs/leaflet/file-upload-handler.145c540a.js">
 <link rel="modulepreload" href="./_npm/leaflet@1.9.4/_esm.js">
 <link rel="modulepreload" href="./_npm/supercluster@8.0.1/_esm.js">
 <link rel="modulepreload" href="./_node/leaflet-draw@1.0.4/index.js">
@@ -232,14 +233,14 @@ import {define} from "./_observablehq/client.js";
 import {registerFile, FileAttachment} from "./_observablehq/stdlib.js";
 import {registerTable} from "./_observablehq/stdlib/duckdb.js";
 
-registerFile("./data/oxford_decarbonisation_data.parquet", {"name":"./data/oxford_decarbonisation_data.parquet","path":"./_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1746415918187});
-registerFile("./data/oxford_lsoa_boundary.geojson", {"name":"./data/oxford_lsoa_boundary.geojson","mimeType":"application/geo+json","path":"./_file/data/oxford_lsoa_boundary.50c731e8.geojson","lastModified":1746415918197});
-registerFile("./data/oxford_lsoas_cartogram.json", {"name":"./data/oxford_lsoas_cartogram.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_cartogram.a72fa2b8.json","lastModified":1746415918197});
-registerFile("./data/oxford_lsoas_regular.json", {"name":"./data/oxford_lsoas_regular.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_regular.e1c36e7e.json","lastModified":1746415918197});
+registerFile("./data/oxford_decarbonisation_data.parquet", {"name":"./data/oxford_decarbonisation_data.parquet","path":"./_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1746512941800});
+registerFile("./data/oxford_lsoa_boundary.geojson", {"name":"./data/oxford_lsoa_boundary.geojson","mimeType":"application/geo+json","path":"./_file/data/oxford_lsoa_boundary.50c731e8.geojson","lastModified":1746512941809});
+registerFile("./data/oxford_lsoas_cartogram.json", {"name":"./data/oxford_lsoas_cartogram.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_cartogram.a72fa2b8.json","lastModified":1746512941810});
+registerFile("./data/oxford_lsoas_regular.json", {"name":"./data/oxford_lsoas_regular.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_regular.e1c36e7e.json","lastModified":1746512941810});
 registerTable("oxford", FileAttachment("./data/oxford_decarbonisation_data.parquet"));
 
 define({id: "dfc31cd4", outputs: ["d3","flubber","require","Mutable","turf","bulmaToast","bulmaQuickview","OSGB","sorterTable","TimeGlyph","GlyphCollection","StreamGraphGlyph","RadialGlyph","LineChartGlyph","glyphMap","createDiscretiserValue","_drawCellBackground","BudgetAllocator","InterventionManager","MiniDecarbModel","createTimelineInterface","plotOverallTimeline","plotOverallPotential","plotDualChartPanel","LeafletMap","geoMorpher","inferTypes","enrichGeoData","normaliseData","insideCell","debounceInput","saveToSession","getFromSession","transformCoordinates","transformGeometry","normalisebyGroup","aggregateValues","getNumericBudget","log","warn","error","setDebugMode","startGroup","endGroup","startTimer","endTimer","perfTimings"], body: async () => {
-const [{require}, {Mutable}, turf, bulmaToast, bulmaQuickview, {OSGB}, {sorterTable}, {TimeGlyph, GlyphCollection}, {StreamGraphGlyph}, {RadialGlyph}, {LineChartGlyph}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {BudgetAllocator}, {InterventionManager, MiniDecarbModel}, {createTimelineInterface}, {plotOverallTimeline, plotOverallPotential, plotDualChartPanel}, {LeafletMap}, {geoMorpher}, {inferTypes, enrichGeoData, normaliseData, insideCell, debounceInput, saveToSession, getFromSession, transformCoordinates, transformGeometry, normalisebyGroup, aggregateValues, getNumericBudget}, {log, warn, error, setDebugMode, startGroup, endGroup}, {startTimer, endTimer, perfTimings}] = await Promise.all([import("./_npm/d3-require@1.3.0/_esm.js"), import("./_observablehq/stdlib.js"), import("./_node/@turf/turf@7.2.0/index.js"), import("./_npm/bulma-toast@2.4.4/_esm.js"), import("./_npm/bulma-quickview@2.0.0/dist/js/bulma-quickview.js"), import("./_import/components/libs/osgb/index.1d2476df.js"), import("./_import/components/libs/sorttable/sorterTableClass.8e3d5a18.js"), import("./_import/components/libs/gridded-glyphmaps/glyph-designs/timeGlyph.a1969fec.js"), import("./_import/components/libs/gridded-glyphmaps/glyph-designs/mirrorTimeGlyph.7e1a9d9c.js"), import("./_import/components/libs/gridded-glyphmaps/glyph-designs/radialglyph.cbd7ddeb.js"), import("./_import/components/libs/gridded-glyphmaps/glyph-designs/lineChartGlyph.303bc053.js"), import("./_import/components/libs/gridded-glyphmaps/index.min.f034b425.js"), import("./_import/components/libs/decarb-model/budget-allocator.5c9a0a07.js"), import("./_import/components/libs/decarb-model/mini-decarbonisation.0633dbad.js"), import("./_import/components/libs/decarb-model/timeline.a2efe4ea.js"), import("./_import/components/libs/plots.609e0a64.js"), import("./_import/components/libs/leaflet/leaflet-map.bfeaff2d.js"), import("./_import/components/libs/geo-morpher/morphs.b9dc31ca.js"), import("./_import/components/libs/helpers.30496caa.js"), import("./_import/components/libs/logger.864b8094.js"), import("./_import/components/libs/timer.7f81ffcc.js")]);
+const [{require}, {Mutable}, turf, bulmaToast, bulmaQuickview, {OSGB}, {sorterTable}, {TimeGlyph, GlyphCollection}, {StreamGraphGlyph}, {RadialGlyph}, {LineChartGlyph}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {BudgetAllocator}, {InterventionManager, MiniDecarbModel}, {createTimelineInterface}, {plotOverallTimeline, plotOverallPotential, plotDualChartPanel}, {LeafletMap}, {geoMorpher}, {inferTypes, enrichGeoData, normaliseData, insideCell, debounceInput, saveToSession, getFromSession, transformCoordinates, transformGeometry, normalisebyGroup, aggregateValues, getNumericBudget}, {log, warn, error, setDebugMode, startGroup, endGroup}, {startTimer, endTimer, perfTimings}] = await Promise.all([import("./_npm/d3-require@1.3.0/_esm.js"), import("./_observablehq/stdlib.js"), import("./_node/@turf/turf@7.2.0/index.js"), import("./_npm/bulma-toast@2.4.4/_esm.js"), import("./_npm/bulma-quickview@2.0.0/dist/js/bulma-quickview.js"), import("./_import/components/libs/osgb/index.1d2476df.js"), import("./_import/components/libs/sorttable/sorterTableClass.8e3d5a18.js"), import("./_import/components/libs/gridded-glyphmaps/glyph-designs/timeGlyph.a1969fec.js"), import("./_import/components/libs/gridded-glyphmaps/glyph-designs/mirrorTimeGlyph.7e1a9d9c.js"), import("./_import/components/libs/gridded-glyphmaps/glyph-designs/radialglyph.cbd7ddeb.js"), import("./_import/components/libs/gridded-glyphmaps/glyph-designs/lineChartGlyph.303bc053.js"), import("./_import/components/libs/gridded-glyphmaps/index.min.f034b425.js"), import("./_import/components/libs/decarb-model/budget-allocator.5c9a0a07.js"), import("./_import/components/libs/decarb-model/mini-decarbonisation.0633dbad.js"), import("./_import/components/libs/decarb-model/timeline.a2efe4ea.js"), import("./_import/components/libs/plots.609e0a64.js"), import("./_import/components/libs/leaflet/leaflet-map.a717cdfb.js"), import("./_import/components/libs/geo-morpher/morphs.b9dc31ca.js"), import("./_import/components/libs/helpers.30496caa.js"), import("./_import/components/libs/logger.864b8094.js"), import("./_import/components/libs/timer.7f81ffcc.js")]);
 log(">> Importing libraries...");
 const d3 = require("d3", "d3-geo-projection");
 const flubber = require("flubber@0.4");
@@ -2672,20 +2673,23 @@ define({id: "3d4e37eb", body: () => {
 console.log("move glyphmap");
 }});
 
-define({id: "ba5bd166", inputs: ["getModelData","getGlyphData","regularGeodataLookup","aggregateValues","glyphVariables","RadialGlyph","glyphColours","map_aggregate","transformCoordinates","turf","regular_geodata","timeline_switch","normaliseData","d3","insideCell"], outputs: ["glyphMapSpec"], body: (getModelData,getGlyphData,regularGeodataLookup,aggregateValues,glyphVariables,RadialGlyph,glyphColours,map_aggregate,transformCoordinates,turf,regular_geodata,timeline_switch,normaliseData,d3,insideCell) => {
+define({id: "82bb147e", inputs: ["getModelData","getGlyphData","regularGeodataLookup","aggregateValues","glyphVariables","RadialGlyph","glyphColours","timeline_switch","map_aggregate","transformCoordinates","turf","regular_geodata","normaliseData","d3"], outputs: ["glyphMapSpec"], body: (getModelData,getGlyphData,regularGeodataLookup,aggregateValues,glyphVariables,RadialGlyph,glyphColours,timeline_switch,map_aggregate,transformCoordinates,turf,regular_geodata,normaliseData,d3) => {
 function glyphMapSpec(width = 800, height = 600) {
   const config = {
     coordType: {
       "Building Level": "mercator",
       "LSOA Level": "notmercator",
+      "LA Level": "mercator", // fallback for LA Level
     },
     dataSource: {
       "Building Level": () => Object.values(getModelData),
       "LSOA Level": () => Object.values(getGlyphData),
+      "LA Level": () => Object.values(getModelData),
     },
     locationFn: {
       "Building Level": (row) => [row.x, row.y],
       "LSOA Level": (row) => regularGeodataLookup[row.code]?.centroid,
+      "LA Level": (row) => regularGeodataLookup[row.code]?.centroid,
     },
     timelineConfig: {
       "Decarbonisation Potentials": {
@@ -2706,10 +2710,12 @@ function glyphMapSpec(width = 800, height = 600) {
   const getCellData = (cell, aggregateLevel, timelineSwitch) => {
     if (!cell.records) return {};
 
+    // aggregate if building level
     if (aggregateLevel === "Building Level") {
       return aggregateValues(cell.records, glyphVariables, "sum");
     }
 
+    // for other levels
     const lsoaCode = cell.records[0].code;
     const glyphData = getGlyphData?.[lsoaCode];
 
@@ -2756,6 +2762,7 @@ function glyphMapSpec(width = 800, height = 600) {
       // cell.data?.length > 0
     ) {
       // draw simple circle for debugging
+      console.log("DEBUGGING TIMESRIESS", timeline_switch, map_aggregate);
       ctx.beginPath();
       ctx.arc(x, y, cellSize / 2, 0, 2 * Math.PI);
       ctx.fillStyle = "#ff1a1ade";
@@ -2814,14 +2821,14 @@ function glyphMapSpec(width = 800, height = 600) {
           });
         }
 
-        const canvas = d3.select(panel).select("canvas").node();
-        canvas.addEventListener("click", function (evt) {
-          const rect = canvas.getBoundingClientRect();
-          const x = evt.clientX - rect.left;
-          const y = evt.clientY - rect.top;
-          global.clickedCell =
-            cells.find((cell) => insideCell(cell, x, y)) || null;
-        });
+        // const canvas = d3.select(panel).select("canvas").node();
+        // canvas.addEventListener("click", function (evt) {
+        //   const rect = canvas.getBoundingClientRect();
+        //   const x = evt.clientX - rect.left;
+        //   const y = evt.clientY - rect.top;
+        //   global.clickedCell =
+        //     cells.find((cell) => insideCell(cell, x, y)) || null;
+        // });
       },
 
       preDrawFn: (cells, cellSize, ctx, global, panel) => {
@@ -3414,7 +3421,7 @@ define({id: "49febe49", inputs: ["getResetRequested","log","setTableRule","setSe
 <!-- ---------------- Glyph Maps ---------------- -->
 <div class="observablehq observablehq--block"><!--:4965f46a:--></div>
 <div class="observablehq observablehq--block"><!--:3d4e37eb:--></div>
-<div class="observablehq observablehq--block"><!--:ba5bd166:--></div>
+<div class="observablehq observablehq--block"><!--:82bb147e:--></div>
 <!-- morph animation logic -->
 <div class="observablehq observablehq--block"><!--:bde59c7b:--></div>
 <div class="observablehq observablehq--block"><!--:6463a51d:--></div>
